added authnz, removed cassandra-all from persistence-common